Cleaned up RunJob main function a bit

--- a/CHANGES
+++ b/CHANGES
@@ -372,10 +372,10 @@ M Mover.py (4)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-68.3
+69.0
 
 General changes:
-..
+- Created handleAdditionalOutFiles() to cleanup main function a bit (RunJob)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
