--- a/CHANGES
+++ b/CHANGES
@@ -382,6 +382,15 @@ General changes:
 - Removed sourcing of copysetup in getAnalysisRunCommand() (ATLASExperiment)
   Tadashi's comment: IIRC, it was required for some trfs to read input files directly from BNL dcache which was unavailable in login shell by default.
   (BNL queues have used the new movers for a while and schedconfig.copysetup has been set to OLDMOVERDEPRECATED with no reported problem)
+- Removed deprecated function getSetupFromCopysetup() (Experiment)
+- Removed deprecated function transferAdditionalCERNVMFiles() and its call (JobLog)
+- Removed deprecated function transferAdditionalFile() and its call (JobLog)
+- Removed deprecated variable transferAdditional from postJobTask() (JobLog)
+- Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in createMetadataForOutput(), 2 times (JobLog)
+- Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in getXML() (PandaServerClient)
+- Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in createFileMetadata() (RunJob)
+- Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in createFileMetadata(), createFileMetadata4EventRange() (RunJobEvent)
+- Removed deprecated function getChecksumCommand() (pUtil)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
