--- a/CHANGES
+++ b/CHANGES
@@ -391,6 +391,9 @@ General changes:
 - Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in createFileMetadata() (RunJob)
 - Removed deprecated usage of getChecksumCommand(), replaced with "adler32" string in createFileMetadata(), createFileMetadata4EventRange() (RunJobEvent)
 - Removed deprecated function getChecksumCommand() (pUtil)
+- Removed getSiteMover() and its import in createMetadataForOutput() (JobLog)
+- Using fixed time-out instead of time-out from old site movers in for looping stage-outs in __loopingJobKiller() and removed usage of getSiteMover() (Monitor)
+- Removed usage of deprecated function getSiteMover() in getXML() (PandaServerClient)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
