--- a/CHANGES
+++ b/CHANGES
@@ -395,6 +395,7 @@ General changes:
 - Using fixed time-out instead of time-out from old site movers in for looping stage-outs in __loopingJobKiller() and removed usage of getSiteMover() (Monitor)
 - Removed usage of deprecated function getSiteMover() in getXML() (PandaServerClient)
 - Removed deprecated use of file stager variables in getAnalysisRunCommand() (ATLASExperiment)
+- Removed deprecated lfchost in updateRunCommandList() (RunJobUtilities)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
