--- a/CHANGES
+++ b/CHANGES
@@ -400,6 +400,7 @@ General changes:
 - Removed usage of deprecated function getSiteMover() in getXML() (PandaServerClient)
 - Removed deprecated use of file stager variables in getAnalysisRunCommand() (ATLASExperiment)
 - Removed deprecated lfchost in updateRunCommandList() (RunJobUtilities)
+- Added a new function for calculating adler32 (same as Harvester), calc_adler32() (SiteMover)
 
 Memory monitoring
 - Fixed missing asetup options for releases > 21.0.18 in getUtilityCommand() (ATLASExperiment)
