Updated default release for memory monitor

--- a/CHANGES
+++ b/CHANGES
@@ -404,6 +404,8 @@ General changes:
 
 Memory monitoring
 - Fixed missing asetup options for releases > 21.0.18 in getUtilityCommand() (ATLASExperiment)
+- Now using getModernASetup() also for the default setup in getUtilityCommand() (ATLASExperiment)
+- Updated default release from 21.0.18 to 21.0.22 which addresses a recently discovered bug in the memory monitor, getUtilityCommand() (ATLASExperiment)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
