Updated memory monitoring

--- a/CHANGES
+++ b/CHANGES
@@ -372,6 +372,12 @@ M Mover.py (4)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+68.3
+
+Memory Monitoring:
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
