--- a/CHANGES
+++ b/CHANGES
@@ -372,6 +372,15 @@ M Mover.py (4)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+68.3
+
+Memory Monitoring:
+- Updated default release from 21.0.18 to 21.0.22 which addresses a recently discovered bug in the memory monitor, getUtilityCommand() (ATLASExperiment)
+- Fixed missing asetup options for releases > 21.0.22 in getUtilityCommand() (ATLASExperiment)
+- Now using getModernASetup() also for the default setup in getUtilityCommand() (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 69.0
 
 setup not correct for analy jobs in getJobExecutionCommand(), addMAKEFLAGS called too late
@@ -401,11 +410,6 @@ General changes:
 - Removed deprecated use of file stager variables in getAnalysisRunCommand() (ATLASExperiment)
 - Removed deprecated lfchost in updateRunCommandList() (RunJobUtilities)
 - Added a new function for calculating adler32 (same as Harvester), calc_adler32() (SiteMover)
-
-Memory monitoring
-- Fixed missing asetup options for releases > 21.0.18 in getUtilityCommand() (ATLASExperiment)
-- Now using getModernASetup() also for the default setup in getUtilityCommand() (ATLASExperiment)
-- Updated default release from 21.0.18 to 21.0.22 which addresses a recently discovered bug in the memory monitor, getUtilityCommand() (ATLASExperiment)
 
 jobPars based payload setup:
 - Added noExecStrCnv (Job)
