--- a/CHANGES
+++ b/CHANGES
@@ -410,6 +410,7 @@ General changes:
 - Removed deprecated use of file stager variables in getAnalysisRunCommand() (ATLASExperiment)
 - Removed deprecated lfchost in updateRunCommandList() (RunJobUtilities)
 - Added a new function for calculating adler32 (same as Harvester), calc_adler32() (SiteMover)
+- Removed time stamp and panda id from job work directory in mkJobWorkdir() (Job)
 
 Memory monitor
 - Created new getUtilityCommand() for Nordugrid since default function has problems with complex ND release (NordugridATLASExperiment)
