Removed process id and time stamp from site workdir in getWorkDir()

--- a/CHANGES
+++ b/CHANGES
@@ -410,7 +410,11 @@ General changes:
 - Removed deprecated use of file stager variables in getAnalysisRunCommand() (ATLASExperiment)
 - Removed deprecated lfchost in updateRunCommandList() (RunJobUtilities)
 - Added a new function for calculating adler32 (same as Harvester), calc_adler32() (SiteMover)
+
+Work directory
+- Work directory naming has been simplified to make it simpler for especially checkpointing
 - Removed time stamp and panda id from job work directory in mkJobWorkdir() (Job)
+- Removed process id and time stamp from site workdir in getWorkDir() (Site)
 
 Memory monitor
 - Created new getUtilityCommand() for Nordugrid since default function has problems with complex ND release (NordugridATLASExperiment)
