--- a/CHANGES
+++ b/CHANGES
@@ -385,6 +385,8 @@ Memory Monitoring:
 
 setup not correct for analy jobs in getJobExecutionCommand(), addMAKEFLAGS called too late
 
+timefloor
+
 
 
 General changes:
