--- a/CHANGES
+++ b/CHANGES
@@ -245,6 +245,14 @@ M RunJobEvent.py (4)
 
 69.2
 
+Prerelease testing: (remove before release)
+
+BENCHMARKING ON
+For testing direct access:
+transfertype in Job = direct
+transferType in pilot.py = direct
+
+
 General changes
 ..
 
